async updateNodeFirewallRules
